Ejercicios de secciones 21 y 22

--- a/CSS/TEXTO.HTML
+++ b/CSS/TEXTO.HTML
@@ -7,14 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-    
-    <a href="http://www.gooogle.com" > Google!!</a>
+    <div>
+        <p>lala</p>
+        <img src="images.jpg">
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui odio enim repellat eum, sapiente nesciunt sed sunt obcaecati voluptates perspiciatis magnam deserunt totam consectet
+        ur cum molestiae atque praesentium explicabo exercitationem!</p>
+    </div>
 </body>
 </html>
