--- a/CSS/TEXTO.HTML
+++ b/CSS/TEXTO.HTML
@@ -10,7 +10,7 @@
     <div>
         <p>lala</p>
         <img src="images.jpg">
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui odio enim repellat eum, sapiente nesciunt sed sunt obcaecati voluptates perspiciatis magnam deserunt totam consectet
+        <p class="texto"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui odio enim repellat eum, sapiente nesciunt sed sunt obcaecati voluptates perspiciatis magnam deserunt totam consectet
         ur cum molestiae atque praesentium explicabo exercitationem!</p>
     </div>
 </body>
